@@ -3,6 +3,7 @@ package com.gentics.mesh.core.data.root;
 import com.gentics.mesh.core.data.Project;
 import com.gentics.mesh.core.data.Branch;
 import com.gentics.mesh.core.data.User;
+import com.gentics.mesh.core.rest.branch.BranchReference;
 
 /**
  * Aggregation vertex for Branches.
@@ -28,7 +29,7 @@ public interface BranchRoot extends RootVertex<Branch> {
 	 * @return new Branch
 	 */
 	default Branch create(String name, User creator) {
-		return create(name, creator, null, true);
+		return create(name, creator, null, true, null);
 	}
 
 	/**
@@ -42,9 +43,10 @@ public interface BranchRoot extends RootVertex<Branch> {
 	 *            Optional uuid
 	 * @param setLatest
 	 *            True to make it the latest branch
+	 * @param baseBranch optional base branch. If not set, the new branch will be based on the latest branch
 	 * @return new Branch
 	 */
-	Branch create(String name, User creator, String uuid, boolean setLatest);
+	Branch create(String name, User creator, String uuid, boolean setLatest, Branch baseBranch);
 
 	/**
 	 * Get the initial branch of this root.
@@ -74,4 +76,14 @@ public interface BranchRoot extends RootVertex<Branch> {
 	 * @return unique index key
 	 */
 	String getUniqueNameKey(String name);
+
+	/**
+	 * Find the referenced branch. Return null, if reference is null or not
+	 * filled. Throw an error if the referenced branch cannot be found.
+	 * 
+	 * @param reference
+	 *            branch reference
+	 * @return referenced branch
+	 */
+	Branch fromReference(BranchReference reference);
 }
