@@ -3,27 +3,28 @@ package com.gentics.mesh.core.data.root.impl;
 import static com.gentics.mesh.core.data.ContainerType.DRAFT;
 import static com.gentics.mesh.core.data.ContainerType.PUBLISHED;
 import static com.gentics.mesh.core.data.relationship.GraphPermission.UPDATE_PERM;
-import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_INITIAL_BRANCH;
-import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_LATEST_BRANCH;
 import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_BRANCH;
 import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_BRANCH_ROOT;
+import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_INITIAL_BRANCH;
+import static com.gentics.mesh.core.data.relationship.GraphRelationships.HAS_LATEST_BRANCH;
 import static com.gentics.mesh.core.rest.error.Errors.conflict;
 import static com.gentics.mesh.core.rest.error.Errors.error;
 import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 import static io.netty.handler.codec.http.HttpResponseStatus.FORBIDDEN;
+import static io.netty.handler.codec.http.HttpResponseStatus.NOT_FOUND;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 
 import org.apache.commons.lang3.StringUtils;
 
 import com.gentics.mesh.context.BulkActionContext;
 import com.gentics.mesh.context.InternalActionContext;
+import com.gentics.mesh.core.data.Branch;
 import com.gentics.mesh.core.data.MeshAuthUser;
 import com.gentics.mesh.core.data.Project;
-import com.gentics.mesh.core.data.Branch;
 import com.gentics.mesh.core.data.User;
 import com.gentics.mesh.core.data.generic.MeshVertexImpl;
-import com.gentics.mesh.core.data.impl.ProjectImpl;
 import com.gentics.mesh.core.data.impl.BranchImpl;
+import com.gentics.mesh.core.data.impl.ProjectImpl;
 import com.gentics.mesh.core.data.relationship.GraphPermission;
 import com.gentics.mesh.core.data.root.BranchRoot;
 import com.gentics.mesh.core.data.schema.MicroschemaContainer;
@@ -31,6 +32,7 @@ import com.gentics.mesh.core.data.schema.SchemaContainer;
 import com.gentics.mesh.core.data.schema.SchemaContainerVersion;
 import com.gentics.mesh.core.data.search.SearchQueueBatch;
 import com.gentics.mesh.core.rest.branch.BranchCreateRequest;
+import com.gentics.mesh.core.rest.branch.BranchReference;
 import com.gentics.mesh.dagger.MeshInternal;
 import com.gentics.mesh.graphdb.spi.Database;
 
@@ -51,7 +53,7 @@ public class BranchRootImpl extends AbstractRootVertex<Branch> implements Branch
 	}
 
 	@Override
-	public Branch create(String name, User creator, String uuid, boolean setLatest) {
+	public Branch create(String name, User creator, String uuid, boolean setLatest, Branch baseBranch) {
 		Branch latestBranch = getLatestBranch();
 
 		Branch branch = getGraph().addFramedVertex(BranchImpl.class);
@@ -70,7 +72,11 @@ public class BranchRootImpl extends AbstractRootVertex<Branch> implements Branch
 			setSingleLinkOutTo(branch, HAS_INITIAL_BRANCH);
 		} else {
 			// otherwise link the branches
-			latestBranch.setNextBranch(branch);
+			if (baseBranch != null) {
+				baseBranch.setNextBranch(branch);
+			} else {
+				latestBranch.setNextBranch(branch);
+			}
 		}
 
 		// make the new branch the latest
@@ -136,7 +142,12 @@ public class BranchRootImpl extends AbstractRootVertex<Branch> implements Branch
 			throw conflict(conflictingBranch.getUuid(), conflictingBranch.getName(), "branch_conflicting_name", request.getName());
 		}
 
-		Branch branch = create(request.getName(), requestUser, uuid, request.isLatest());
+		Branch baseBranch = fromReference(request.getBaseBranch());
+		if (baseBranch != null && !requestUser.hasPermission(baseBranch, GraphPermission.READ_PERM)) {
+			throw error(FORBIDDEN, "error_missing_perm", baseBranch.getUuid());
+		}
+
+		Branch branch = create(request.getName(), requestUser, uuid, request.isLatest(), baseBranch);
 		if (!isEmpty(request.getHostname())) {
 			branch.setHostname(request.getHostname());
 		}
@@ -182,5 +193,32 @@ public class BranchRootImpl extends AbstractRootVertex<Branch> implements Branch
 		// All branches are gone. Now delete the root.
 		getElement().remove();
 		bac.process();
+	}
+
+	@Override
+	public Branch fromReference(BranchReference reference) {
+		Branch branch = null;
+
+		if (reference == null) {
+			return null;
+		}
+
+		if (!reference.isSet()) {
+			return null;
+		}
+
+		if (!StringUtils.isEmpty(reference.getUuid())) {
+			branch = findByUuid(reference.getUuid());
+			if (branch == null) {
+				throw error(NOT_FOUND, "object_not_found_for_uuid", reference.getUuid());
+			}
+		} else if (!StringUtils.isEmpty(reference.getName())) {
+			branch = findByName(reference.getName());
+			if (branch == null) {
+				throw error(NOT_FOUND, "object_not_found_for_name", reference.getName());
+			}
+		}
+
+		return branch;
 	}
 }
