@@ -53,6 +53,8 @@ icon:check[] UI: Added a scrollbar to the schema dropdown menu. link:https://git
 
 icon:plus[] Branches: It is now possible to set the "latest" branch of a project.
 
+icon:plus[] Branches: It is now possible to create branches based on specific other branches.
+
 icon:plus[] Branches: Branches can now be tagged just like nodes.
 
 icon:check[] Core: A inconsistency within the webroot path handling has been fixed. Previously the webroot path uniqueness checks would not work correctly once another branch has been added.
